keep syntax compatible with java11